# vocabify

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Fragments.hpp  Main.cpp
src/fragments/: MainFragment.hpp
